--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
